Initial work to make cross-platform by porting many functions to standard C++ instead of Microsoft specific extensions.

--- a/Nuance.vcproj
+++ b/Nuance.vcproj
@@ -1044,7 +1044,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\nativecodecache.h"
+				RelativePath=".\NativeCodeCache.h"
 				>
 			</File>
 			<File
