--- a/Nuance.vcxproj
+++ b/Nuance.vcxproj
@@ -373,7 +373,7 @@
     <ClInclude Include="MemoryManager.h" />
     <ClInclude Include="mpe.h" />
     <ClInclude Include="mpe_alloc.h" />
-    <ClInclude Include="nativecodecache.h" />
+    <ClInclude Include="NativeCodeCache.h" />
     <ClInclude Include="NuanceRes.h" />
     <ClInclude Include="NuonEnvironment.h" />
     <ClInclude Include="NuonMemoryManager.h" />
