--- a/Nuance.vcxproj.filters
+++ b/Nuance.vcxproj.filters
@@ -347,7 +347,7 @@
     <ClInclude Include="mpe_alloc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="nativecodecache.h">
+    <ClInclude Include="NativeCodeCache.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="NuanceRes.h">
